--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,13 +1,99 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+button {
+  border: none;
+  text-decoration: none;
+}
+
+a {
+  color: #eee;
+  text-decoration: none;
+}
+
+.d-flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.App {
+  height: 100vh;
+  display: grid;
+  grid-template:
+    'header'
+    'main'
+    'footer';
+  grid-template-columns: 1fr;
+  grid-template-rows: 56px 1fr 30px;
+}
+
+header {
+  grid-area: header;
+  background-color: #2bcbba;
+  color: #eee;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+  background-color: #2bcbba;
+  color: #eee;
+}
+
+.container {
+  margin: 1rem;
+}
+
+/* Home */
+
+.btn-group {
+  width: 380px;
+  height: 120px;
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn {
+  height: 120px;
+  width: 160px;
+
+  background-color: #5ed662;
+  border-radius: 4px;
+
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.4);
+}
+
+.btn:hover {
+  background-color: rgb(76, 175, 80);
+  color: white;
+}
+
+.btn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.btn:active {
+  background-color: #357a38;
 }
