--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -97,3 +97,38 @@ footer {
 .btn:active {
   background-color: #357a38;
 }
+
+/* Lista Agendamentos */
+
+/* table */
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#customers td,
+#customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+  background-color: #ddd;
+}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4caf50;
+  color: white;
+}
+
+.td-center {
+  text-align: center;
+}
