--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -57,8 +57,12 @@ footer {
   margin: 1rem;
 }
 
-/* Home */
+/* Error Message */
+.error {
+  color: red;
+}
 
+/* Home */
 .btn-group {
   width: 380px;
   height: 120px;
@@ -98,8 +102,38 @@ footer {
   background-color: #357a38;
 }
 
-/* Lista Agendamentos */
+/* Pagina de Agendamentos */
+/* Workaround for hide the disabled times from datePicker */
+.react-datepicker__time-list-item--disabled {
+  display: none;
+}
 
+label {
+  font-weight: bold;
+  display: flex;
+  margin-bottom: 5px;
+}
+
+input[type='text'],
+input[type='email'] {
+  display: block;
+  width: 400px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42px;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  /* margin-bottom: 20px; */
+}
+
+.form-control {
+  margin-bottom: 20px;
+}
+
+/* Lista de Agendados */
 /* table */
 #customers {
   font-family: Arial, Helvetica, sans-serif;
