--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -10,22 +10,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-button {
-  border: none;
-  text-decoration: none;
-}
-
-a {
-  color: #eee;
-  text-decoration: none;
-}
-
-.d-flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
+/* Layout */
 .App {
   height: 100vh;
   display: grid;
@@ -39,8 +24,6 @@ a {
 
 header {
   grid-area: header;
-  background-color: #2bcbba;
-  color: #eee;
 }
 
 main {
@@ -49,129 +32,15 @@ main {
 
 footer {
   grid-area: footer;
-  background-color: #2bcbba;
-  color: #eee;
 }
 
-.container {
-  margin: 1rem;
-}
-
-/* Error Message */
+/* Formik Error Message */
 .error {
   color: red;
 }
 
-/* Home */
-.btn-group {
-  width: 380px;
-  height: 120px;
-  margin-top: 5rem;
-  display: flex;
-  justify-content: space-between;
-}
-
+/* Home Btns */
 .btn {
-  height: 120px;
-  width: 160px;
-
-  background-color: #5ed662;
-  border-radius: 4px;
-
-  color: white;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
-.btn:focus {
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.4);
-}
-
-.btn:hover {
-  background-color: rgb(76, 175, 80);
-  color: white;
-}
-
-.btn:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
-}
-
-.btn:active {
-  background-color: #357a38;
-}
-
-/* Pagina de Agendamentos */
-/* Workaround for hide the disabled times from datePicker */
-.react-datepicker__time-list-item--disabled {
-  display: none;
-}
-
-label {
-  font-weight: bold;
-  display: flex;
-  margin-bottom: 5px;
-}
-
-input[type='text'],
-input[type='email'] {
-  display: block;
-  width: 400px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42px;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  /* margin-bottom: 20px; */
-}
-
-.form-control {
-  margin-bottom: 20px;
-}
-
-.btn-submit {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 32px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-}
-
-/* Lista de Agendados */
-/* table */
-#customers {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#customers td,
-#customers th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#customers tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#customers tr:hover {
-  background-color: #ddd;
-}
-
-#customers th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #4caf50;
-  color: white;
-}
-
-.td-center {
-  text-align: center;
+  width: 300px;
+  height: 200px;
 }
